// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table/with expandable rows with expandable rows 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c8 {
  color: currentColor;
  min-width: 32px;
}

.c7 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #434d59;
}

.c7:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

.c3 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 30px;
}

.c3:first-child {
  padding-left: 16px;
}

.c4 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: auto;
}

.c4:first-child {
  padding-left: 16px;
}

.c2 {
  color: #434d59;
  border-bottom: 1px solid #e4e7eb;
}

.c6 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 16px;
}

.c6:first-child {
  padding-left: 16px;
}

.c5:hover {
  background-color: #f0f2f5;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  background: white;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <table
      className="c1"
    >
      <thead>
        <tr
          className="c2"
        >
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
            width="30px"
          />
          <th
            className="c4"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            className="c4"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            className="c4"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-01
          </td>
          <td
            className="c6"
          >
            2,025 eaches
          </td>
          <td
            className="c6"
          >
            1,800 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          >
            <button
              aria-label="Expand row"
              className="c7"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c8"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="downArrow"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            className="c6"
          >
            2019-10-02
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            2,250 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-03
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            1,425 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          >
            <button
              aria-label="Expand row"
              className="c7"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c8"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="downArrow"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            className="c6"
          >
            2019-10-04
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            675 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-07
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            1,575 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          >
            <button
              aria-label="Expand row"
              className="c7"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c8"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="downArrow"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            className="c6"
          >
            2019-10-22
          </td>
          <td
            className="c6"
          >
            1,725 eaches
          </td>
          <td
            className="c6"
          >
            -
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-23
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            -
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-24
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            -
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</div>
`;

exports[`Storyshots Table/with expandable rows with rows expanded by default 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c9 {
  background-color: #e1ebfa;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.c8 {
  color: currentColor;
  min-width: 32px;
}

.c10 {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
  font-size: 16px;
  line-height: 1.5;
  color: #122b47;
}

.c7 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #434d59;
}

.c7:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

.c3 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 30px;
}

.c3:first-child {
  padding-left: 16px;
}

.c4 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: auto;
}

.c4:first-child {
  padding-left: 16px;
}

.c2 {
  color: #434d59;
  border-bottom: 1px solid #e4e7eb;
}

.c6 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 16px;
}

.c6:first-child {
  padding-left: 16px;
}

.c5:hover {
  background-color: #f0f2f5;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  background: white;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <table
      className="c1"
    >
      <thead>
        <tr
          className="c2"
        >
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
            width="30px"
          />
          <th
            className="c4"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            className="c4"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            className="c4"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-01
          </td>
          <td
            className="c6"
          >
            2,025 eaches
          </td>
          <td
            className="c6"
          >
            1,800 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          >
            <button
              aria-label="Expand row"
              className="c7"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c8"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="downArrow"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            className="c6"
          >
            2019-10-02
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            2,250 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-03
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            1,425 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          >
            <button
              aria-label="Collapse row"
              className="c7"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c8"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="upArrow"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </td>
          <td
            className="c6"
          >
            2019-10-04
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            675 eaches
          </td>
        </tr>
        <tr
          data-testid="expanded-table-row"
        >
          <td
            colSpan={4}
          >
            <div
              className="c9"
            >
              <p
                className="c10"
                color="blackBlue"
                disabled={false}
                fontSize="medium"
                fontWeight="bold"
              >
                Expands!
              </p>
            </div>
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-07
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            1,575 eaches
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          >
            <button
              aria-label="Collapse row"
              className="c7"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c8"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="upArrow"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                />
              </svg>
            </button>
          </td>
          <td
            className="c6"
          >
            2019-10-22
          </td>
          <td
            className="c6"
          >
            1,725 eaches
          </td>
          <td
            className="c6"
          >
            -
          </td>
        </tr>
        <tr
          data-testid="expanded-table-row"
        >
          <td
            colSpan={4}
          >
            <div
              className="c9"
            >
              <p
                className="c10"
                color="blackBlue"
                disabled={false}
                fontSize="medium"
                fontWeight="bold"
              >
                Expands!
              </p>
            </div>
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-23
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            -
          </td>
        </tr>
        <tr
          className="c5"
          data-testid="table-row"
        >
          <td
            className="c6"
          />
          <td
            className="c6"
          >
            2019-10-24
          </td>
          <td
            className="c6"
          >
            2,475 eaches
          </td>
          <td
            className="c6"
          >
            -
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</div>
`;
